Small changes to Jena indexing
ELTER-6